<resources>
    <string name="picker_sure">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_title">选择时间</string>

    <string name="picker_year">年</string>
    <string name="picker_month">月</string>
    <string name="picker_day">日</string>
    <string name="picker_hour">时</string>
    <string name="picker_minute">分</string>

    <string name="number_picker_increment_button">"增加"</string>
    <string name="number_picker_decrement_button">"减少"</string>



    <string name="time_picker_increment_minute_button">"Minute +"</string>
    <string name="time_picker_decrement_minute_button">"Minute -"</string>
    <string name="time_picker_increment_hour_button">"Hour +"</string>
    <string name="time_picker_decrement_hour_button">"Hour -"</string>
    <string name="time_picker_increment_set_pm_button">"Set pm"</string>
    <string name="time_picker_decrement_set_am_button">"Set am"</string>
    <string name="date_picker_increment_month_button">"Month +"</string>
    <string name="date_picker_decrement_month_button">"Month -"</string>
    <string name="date_picker_increment_day_button">"Day +"</string>
    <string name="date_picker_decrement_day_button">"Day -"</string>
    <string name="date_picker_increment_year_button">"Year +"</string>
    <string name="date_picker_decrement_year_button">"Year -"</string>
    <string name="calendar_year">年</string>
    <string name="calendar_month">月</string>
    <string name="calendar_day">日</string>
    <string name="calendar_hour">时</string>
    <string name="calendar_mintue">分</string>
    <string name="lunar_leap">Leap</string>

    <string name="pull_refresh_text">下拉刷新</string>
    <string name="let_go_refresh_text">松手刷新</string>

    <string name="load_text">正在加载</string>

    <!--TakePhoto-->
    <string name="tip_type_not_image">选择的不是图片</string>
    <string name="tip_no_camera">没有相机</string>
    <string name="tip_tips">提示</string>
    <string name="tip_compress">正在压缩照片...</string>
    <string name="tip_compress_failed">"%1$s 图片压缩失败:%2$s picturePath:%3$s"</string>
    <string name="msg_crop_failed">"有裁切失败的图片"</string>
    <string name="msg_compress_failed">"有压缩失败的图片"</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_operation_canceled">"操作被取消"</string>
    <string name="tip_permission_camera">没有使用相机的权限，请在权限管理中开启</string>
    <string name="tip_permission_storage">没有使用SD卡的权限，请在权限管理中开启</string>
    <string name="tip_permission_camera_storage">没有使用相机和SD卡的权限，请在权限管理中开启</string>

    <string name="list_load_end">没有更多了</string>
    <string name="list_load_failed">加载失败，请点我重试</string>
    <string name="list_loading">正在加载中...</string>
    <!--错误页-->
    <string name="common_empty_tips">暂时没有内容哦</string>
    <string name="common_network_error_tips">暂无网络，稍后再试啦</string>
    <string name="common_error_tips">加载失败，请稍后重试哦</string>
    <string name="retry_now">立即重试</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="wait_time"><![CDATA[正在为您寻找车辆，等待<font color="#ff6658"> %s </font>]]></string>


    <string name="container_search_loading">努力查询中</string>
    <string name="container_load_error">加载失败，请稍后重试</string>
    <string name="container_no_search_record">暂无搜索记录</string>
    <string name="container_network_error_tips">无法连接网络，请检查网络设置</string>
    <string name="container_error_reload">重新加载</string>


    <!--custom multipleimageselect -->
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>

    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>

    <string name="cancel">取消</string>

    <!--地图-->
    <string name="use_gaode">用高德地图导航</string>
    <string name="use_baidu">用百度地图导航</string>

    <!--更多服务-->
    <string name="more_service_tip">搜索服务，如“社保”</string>

    <string name="app_name">LibWidget</string>

    <string name="token_invalid">登陆已失效，请重新登陆</string>
    <string name="container_add_data">添加数据</string>
    <string name="container_add_data_tips">暂无数据，赶紧去添加吧</string>

    <string name="default_no_data">暂无数据</string>
    <string name="default_no_address">暂未添加地址</string>
    <string name="default_add_address">添加地址</string>
    <string name="default_no_message">暂无消息通知</string>
    <string name="default_no_network">无法连接网络，请检查网络设置</string>
    <string name="default_reload">重新加载</string>
    <string name="default_no_search_result">暂无搜索结果</string>
    <string name="default_server_error">页面暂时无法访问，正在努力修复中</string>
    <string name="default_back_homepage">返回首页</string>
    <string name="default_server_maintain">系统维护升级中，将于2018年10月22日18:00恢复，对您带来不便之处，敬请谅解。</string>


    <string name="default_category_selection_second_text">请选择二级分类</string>
    <string name="default_category_selection_tertiary_text">请选择三级分类</string>

    <string name="category_toast">请补齐分类选项</string>

    <string name="widget_btn_ok">确定</string>
    <string name="widget_btn_cancel">取消</string>

    <!--告知型弹窗Alert-->
    <string name="widget_confirm_dialog_checkbox_tip">下次不再询问</string>

    <!--提交型弹窗-->
    <string name="widget_choice_dialog_title_default">请选择办理情形</string>


</resources>
