<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:gravity="end"
    android:orientation="vertical">

    <com.pasc.lib.widget.roundview.RoundTextView
        android:id="@+id/tv_gaode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:rv_backgroundColor="#ffffff"
        app:rv_cornerRadius_BL="3sp"
        app:rv_cornerRadius_BR="3sp"
        android:gravity="center"
        android:text="@string/use_gaode"
        android:textColor="#333333"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dddddd" />

    <com.pasc.lib.widget.roundview.RoundTextView
        android:id="@+id/tv_baidu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:rv_backgroundColor="#ffffff"
        app:rv_cornerRadius_BL="3sp"
        app:rv_cornerRadius_BR="3sp"
        android:gravity="center"
        android:text="@string/use_baidu"
        android:textColor="#333333"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="10dp" />

    <com.pasc.lib.widget.roundview.RoundTextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        app:rv_backgroundColor="#ffffff"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#333333"
        android:textSize="20sp"
        app:rv_cornerRadius="3sp" />

</LinearLayout>