<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:id="@+id/temp_blank"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="horizontal"
      />
  <android.support.constraint.ConstraintLayout
      android:id="@+id/temp_loading"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="horizontal"
      >
    <ImageView
        android:id="@+id/temp_loading_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/view_container_margin"
        android:src="@drawable/widget_search_loading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/temp_loading_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_loading_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/view_container_margin_m"
        android:gravity="center_horizontal"
        android:text="@string/container_search_loading"
        android:textColor="#999999"
        app:layout_constraintTop_toBottomOf="@id/temp_loading_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
      android:id="@+id/temp_error"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      >

    <ImageView
        android:id="@+id/temp_error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/view_container_margin"
        android:contentDescription="@null"
        android:src="@drawable/container_ic_error"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/temp_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_error_image"
        android:layout_marginTop="@dimen/view_container_margin_m"
        android:gravity="center_horizontal"
        android:text="@string/container_load_error"
        app:layout_constraintTop_toBottomOf="@id/temp_error_image"
        android:textColor="#999999"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
  </android.support.constraint.ConstraintLayout>
  <android.support.constraint.ConstraintLayout
      android:id="@+id/temp_empty"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      >
    <ImageView
        android:id="@+id/temp_empty_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/view_container_margin"
        android:src="@drawable/container_ic_online_no_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/temp_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_empty_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/view_container_margin_m"
        android:text="@string/container_no_search_record"
        android:textColor="#999999"
        android:textSize="@dimen/picker_un_text_size"
        app:layout_constraintTop_toBottomOf="@id/temp_empty_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
      android:id="@+id/temp_network_error"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      >

    <ImageView
        android:id="@+id/temp_network_error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/view_container_margin"
        android:contentDescription="@null"
        android:src="@drawable/container_ic_network_error"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/temp_network_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_network_error_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/view_container_margin_m"
        android:gravity="center_horizontal"
        android:text="@string/container_network_error_tips"
        android:textColor="#999999"
        android:textSize="@dimen/picker_un_text_size"
        app:layout_constraintTop_toBottomOf="@id/temp_network_error_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/temp_btn_error_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_network_error_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_gray_stroke_radius_3"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/container_error_reload"
        android:textColor="#333333"
        android:textSize="17sp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/temp_network_error_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
  </android.support.constraint.ConstraintLayout>
  <android.support.constraint.ConstraintLayout
      android:id="@+id/temp_add"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      >
    <ImageView
        android:id="@+id/temp_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_container_margin"
        android:contentDescription="@null"
        android:src="@drawable/container_ic_online_no_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/temp_add_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_add_image"
        android:layout_marginTop="@dimen/view_container_margin_m"
        android:gravity="center_horizontal"
        android:text="@string/container_add_data_tips"
        android:textColor="#999999"
        android:textSize="@dimen/picker_un_text_size"
        app:layout_constraintTop_toBottomOf="@id/temp_add_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/temp_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_add_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_gray_stroke_radius_3"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/container_add_data"
        android:textColor="#333333"
        android:textSize="17sp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/temp_add_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
  </android.support.constraint.ConstraintLayout>
</merge>
