<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_del_img"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:visibility="gone">

        <ImageView
            android:id="@+id/close"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/bg_close"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/img_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>
            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxHeight="108dp"
                android:textColor="#2E332F"
                android:textSize="18sp"
                tools:text="标题"/>

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxHeight="108dp"
                android:textColor="#2E332F"
                android:textSize="15sp"
                tools:text="描述内容"/>

            <LinearLayout
                android:id="@+id/lin_check"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginTop="12dp"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/check_id"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/check_selector"
                    android:button="@null"
                    android:clickable="false"
                    android:visibility="visible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/widget_confirm_dialog_checkbox_tip"
                    android:textColor="#999999"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>


        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E0E0E0"/>

        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_tv"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:foreground="@drawable/fg_clickable"
                android:gravity="center"
                android:text="@string/widget_btn_cancel"
                android:textColor="@color/pasc_dialog_cancel_text"
                android:textSize="17sp"/>

            <View
                android:id="@+id/vertical_line"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#E0E0E0"/>

            <TextView
                android:id="@+id/confirm_tv"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:foreground="@drawable/fg_clickable"
                android:gravity="center"
                android:text="@string/widget_btn_ok"
                android:textColor="@color/pasc_dialog_confirm_text"
                android:textSize="17sp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
